c2rust-transpile/tests/snapshots/snapshots__transpile-linux@irreducible.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/irreducible.linux.rs
input_file: c2rust-transpile/tests/snapshots/os-specific/irreducible.c
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn irreducible(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    let mut c2rust_current_block: u64;
    's_36: loop {
        if x < 6 as ::core::ffi::c_int {
            x += 1 as ::core::ffi::c_int;
            c2rust_current_block = 11006884313001856693;
        } else {
            c2rust_current_block = 7005012182606106737;
        }
        loop {
            match c2rust_current_block {
                7005012182606106737 => {
                    if x < 9 as ::core::ffi::c_int {
                        break;
                    } else {
                        c2rust_current_block = 11006884313001856693;
                    }
                }
                _ => {
                    if x >= 20 as ::core::ffi::c_int {
                        break 's_36;
                    }
                    x += 90 as ::core::ffi::c_int;
                    c2rust_current_block = 7005012182606106737;
                }
            }
        }
        x += 2 as ::core::ffi::c_int;
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn jump_to_irreducible(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    let mut c2rust_current_block: u64;
    '_b: {
        match x {
            0 => {
                if x != 0 {
                    c2rust_current_block = 197541242141302941;
                    break '_b;
                }
            }
            1 => {
                if x != 0 {
                    c2rust_current_block = 3760217419871525498;
                    break '_b;
                }
            }
            _ => {
                x += 1 as ::core::ffi::c_int;
            }
        }
        x += 2 as ::core::ffi::c_int;
        c2rust_current_block = 197541242141302941;
    }
    loop {
        match c2rust_current_block {
            197541242141302941 => {
                if x != 0 {
                    c2rust_current_block = 3760217419871525498;
                    continue;
                }
                return x;
            }
            _ => {
                if x != 0 {
                    c2rust_current_block = 197541242141302941;
                    continue;
                }
                return x;
            }
        }
    }
}
