c2rust-transpile/tests/snapshots/snapshots__transpile-linux@switch.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/switch.linux.rs
input_file: c2rust-transpile/tests/snapshots/os-specific/switch.c
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn basic_switch(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    match x {
        0 => {
            x += 1 as ::core::ffi::c_int;
        }
        1 => {
            x += 2 as ::core::ffi::c_int;
            if x != 0 {
                x += 3 as ::core::ffi::c_int;
            } else {
                x += 4 as ::core::ffi::c_int;
            }
            x += 5 as ::core::ffi::c_int;
        }
        2 | 3 | 4 => {
            x += 6 as ::core::ffi::c_int;
        }
        _ => {}
    }
    match x {
        0 => {
            x += 7 as ::core::ffi::c_int;
        }
        _ => {
            x += 8 as ::core::ffi::c_int;
        }
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn fallthrough_many(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    'c_175: {
        'c_174: {
            'c_173: {
                match x {
                    0 => {
                        x += 1 as ::core::ffi::c_int;
                    }
                    1 => {}
                    2 => {
                        break 'c_173;
                    }
                    3 => {
                        break 'c_174;
                    }
                    _ => {
                        break 'c_175;
                    }
                }
                x += 1 as ::core::ffi::c_int;
            }
            x += 1 as ::core::ffi::c_int;
        }
        x += 1 as ::core::ffi::c_int;
    }
    x += 1 as ::core::ffi::c_int;
    's_64: {
        'c_137: {
            'c_136: {
                'c_135: {
                    match x {
                        0 => {
                            x += 1 as ::core::ffi::c_int;
                        }
                        1 => {}
                        2 => {
                            break 'c_135;
                        }
                        3 => {
                            break 'c_136;
                        }
                        4 => {
                            break 'c_137;
                        }
                        _ => {
                            break 's_64;
                        }
                    }
                    x += 1 as ::core::ffi::c_int;
                }
                x += 1 as ::core::ffi::c_int;
            }
            x += 1 as ::core::ffi::c_int;
        }
        x += 1 as ::core::ffi::c_int;
    }
    return x;
}
