c2rust-transpile/tests/snapshots/snapshots__transpile-linux@typedefidx.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/typedefidx.linux.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
pub type size_t = usize;
pub type __uint64_t = u64;
pub type uint64_t = __uint64_t;
#[no_mangle]
pub unsafe extern "C" fn index_typedef(mut arr: *mut uint64_t) {
    let mut foo3: size_t = *arr.offset(25 as ::core::ffi::c_int as isize) as size_t;
}
